# trunk-compress

./: .gitignore  Cargo.toml  README.md  server_yew.rs
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
dev-reload/: Cargo.toml
dev-reload/src/: lib.rs
serve-yew/: Cargo.toml
serve-yew/src/: lib.rs
