[package]
name = "trunk-compress"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
anyhow = "1.0.75"
async-compression = {version = "0.4.5", features=["brotli", "tokio"] }
clap = {version="4.4.8", features=["derive"]}
itertools = "0.12.0"
mime_guess = "2.0.4"
pathdiff = "0.2.1"
tokio = { version = "1.34.0", features = ["fs", "macros", "rt-multi-thread", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.4.0"

