[package]
name = "serve-yew"
version = "0.1.6"
edition = "2021"


[dependencies]
axum = { version = "0.8.1"  }

bytes = "1.5"
derive_more = { version = "2.0", features = ["deref", "deref_mut", "from"] }
futures = "0.3"
http = "1.0"
mime_guess = "2.0"
rust-embed = "8.0"


tokio = { version = "1.35" }
tower-service = "0.3.3"
tracing = "0.1.41"


# Optional dependencies
notify-rust = { version = "4.9", optional = true }
async-compression = {version = "0.4.5", features=["gzip", "tokio"] ,optional=true}

[features]
dev-reload = ["dep:notify-rust"]
compression = ["dep:async-compression", "tokio/io-util"]
